# silly-game

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  meson.build  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wasm.txt
.github/workflows/: cmake.yml  linux.yml  macos.yml  pages.yml  windows.yml
client/: CMakeLists.txt  index.html  meson.build  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: game.cpp  game.h  inputManager.cpp  inputManager.h  main.cpp  main.ts  renderer.cpp  renderer.h
client/src/css/: index.css
cmake/: findLibuv.cmake  findSDL.cmake  finduWebsockets.cmake
common/: CMakeLists.txt  meson.build
common/src/: ansi_coloring.h  bytestream.cpp  bytestream.h  chalk.cpp  chalk.h  collision.cpp  collision.h  formatter.cpp  formatter.h  utils.h  vec2.cpp  vec2.h
common/src/math/: collision.cpp  collision.h  gmath.h  shape.cpp  shape.h  vec2.cpp  vec2.h
examples/: CMakeLists.txt  index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/flappy-bird/: CMakeLists.txt
examples/flappy-bird/src/: game.cpp  game.h  main.cpp
examples/flappy_bird/: CMakeLists.txt
examples/flappy_bird/assets/: pipe.kra
examples/flappy_bird/src/: game.cpp  game.h  main.cpp
examples/grid_demo/: CMakeLists.txt  main.cpp
examples/public/assets/: bird.kra
examples/spritebenchmark/: CMakeLists.txt  main.cpp
include/fc/client/: app.h  color.h  inputManager.h  resources.h
include/fc/client/render/: batcher.h  renderer.h  shader.h  texture.h
include/fc/client/scene/: container.h  renderItem.h  sprite.h
include/fc/core/: bitStream.h  buffer.h  formatter.h  idPool.h  ticker.h
include/fc/core/collision/: collision.h  grid.h  shape.h
include/fc/core/math/: gmath.h  matrix.h  vec2.h
lib/include/glad/: gl.h
lib/include/stb/: stb_image.h
server/: CMakeLists.txt  meson.build
server/src/: ansi_coloring.cpp  game.h  main.cpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  app.cpp  inputManager.cpp  resources.cpp
src/client/render/: batcher.cpp  renderer.cpp  shader.cpp  texture.cpp
src/client/scene/: container.cpp
src/core/: CMakeLists.txt  bitStream.cpp  formatter.cpp  ticker.cpp
src/core/collision/: collision.cpp  shape.cpp
systems/: CMakeLists.txt
systems/include/app/: app.h
systems/include/input/: inputManager.h
systems/include/math/: collision.h  gmath.h  grid.h  matrix.h  shape.h  vec2.h
systems/include/net/: bitStream.h  bytestream.h
systems/include/render/: batcher.h  color.h  renderItem.h  renderer.h  resources.h  shader.h  texture.h
systems/include/util/: buffer.h  formatter.h  idPool.h  ticker.h
systems/input/: CMakeLists.txt  inputManager.cpp  inputManager.h
systems/math/: CMakeLists.txt  collision.cpp  collision.h  gmath.h  matrix.h  shape.cpp  shape.h  vec2.h
systems/net/: CMakeLists.txt  bytestream.cpp  bytestream.h
systems/net/tests/: bytestreamTest.cpp
systems/render/: CMakeLists.txt  batcher.cpp  batcher.h  color.h  renderItem.h  renderer.cpp  renderer.h  resources.cpp  resources.h  shader.cpp  shader.h  texture.cpp  texture.h
systems/src/app/: app.cpp
systems/src/input/: inputManager.cpp
systems/src/math/: collision.cpp  shape.cpp
systems/src/net/: bitStream.cpp  bytestream.cpp
systems/src/render/: batcher.cpp  renderer.cpp  resources.cpp  shader.cpp  shaders.c  shaders.h  sprite.frag  sprite.vert  texture.cpp
systems/src/util/: formatter.cpp  ticker.cpp
systems/tests/: .clang-tidy  CMakeLists.txt  bitStream.test.cpp  bytestreamTest.cpp  grid.test.cpp  gridTest.cpp  idPool.test.cpp  idPoolTest.cpp
systems/util/: CMakeLists.txt  formatter.cpp  formatter.h  utils.h
tests/: .clang-tidy  CMakeLists.txt  bitStream.test.cpp  docTest.cpp  grid.test.cpp  idPool.test.cpp
