add_library(doctest SHARED docTest.cpp)

macro(AddTestFile test_name test_file)
    add_executable(${test_name} ${test_file})
    target_link_libraries(${test_name} PRIVATE doctest net math util)

    add_test(
        NAME ${test_name}
        COMMAND ${test_name}
    )
endmacro()

AddTestFile(BytestreamTest bytestreamTest.cpp)

AddTestFile(GridTest grid.test.cpp)

AddTestFile(idPoolTest idPool.test.cpp)
